# AllTheNames

./: .flake8  README.md  all_the_names.py  asx_top_n.ipynb  mypy.ini  names.csv  noxfile.py  pyproject.toml
.github/: pull_request_template.md  release-drafter.yml
.github/workflows/: pipeline.yml
data/: AfricanNamesDatabase.csv  CMU_Artificial_Intelligence_Repository_names.csv  arabic_names.csv  austin_texas_names.csv  data_world_babynames.csv  hadley_data_baby_names.csv  mbejda_names.csv  names_dataset.csv  ssb_names.csv  swedishdata_personalnames.csv  vornam_koeln_names.csv
src/: utils.py
src/data_collection/: AfricanNamesDatabase.py  CMU_Artificial_Intelligence_Repository_names.py  MatthiasWinkelmann_firstname_database.py  arabic_names.py  austin_texas_data.py  data_gov_Popular_Baby_Names.py  data_world_babynames.py  hadley_babynames.py  mbejda_names_csvs.py  names_dataset.py  scotland_babies_first_names.py  ssa_national_names.py  ssb_names.py  swedishdata_personalnames.py  vornam_koeln.py
