[tool.poetry]
authors = ["Yass"]
description = "Dataset of people names"
license = "MIT"
name = "allthenames"
version = "0.1.0"

[tool.poetry.dependencies]
pandas = "^1.4.1"
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
