[tool.poetry]
authors = ["Yass"]
description = "Dataset of people names"
license = "MIT"
name = "allthenames"
version = "0.2.0"
repository = "https://github.com/diabolical-ninja/AllTheNames"

[tool.poetry.dependencies]
pandas = "^1.4.1"
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.7.1"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.3.1"
flake8-requirements = "^1.6.0"
mypy = "^0.971"
nox = "^2022.1.7"
pep8-naming = "^0.13.1"
safety = "^2.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.mypy]
files = ["src/"]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true